matrix + pgp => keys

--- a/index.html
+++ b/index.html
@@ -66,14 +66,19 @@
         </div>
 
         <div style="padding-top: 1em">
-            <h2>Me</h2>
+            <h1>Me</h1>
 
             <div>
                 <table class="about">
                     <tbody>
                         <tr>
                             <td>Email</td>
-                            <td>mehvix <code>at</code> protonmail <code>dot</code> com (<a href="pgp.html">PGP</a>)<br>
+                            <td>mehvix <code>at</code> protonmail <code>dot</code> com (<a href="keys.html">Keys</a>)
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Matrix</td>
+                            <td><a href="https://matrix.to/#/@mehvix:matrix.org">@mehvix:matrix.org</a> (<a href="keys.html">Keys</a>)
                             </td>
                         </tr>
                         <tr>
@@ -85,12 +90,12 @@
                             <td>Mehvix#7966</td>
                         </tr>
                         <tr>
-                            <td>LinkedIn</td>
-                            <td><a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a></td>
-                        </tr>
-                        <tr>
                             <td>Resumé</td>
                             <td><a href="https://cloud.mehvix.com/s/9oXaWqbLR4amMmz">Link</a></td>
+                        </tr>
+                        <tr>
+                            <td>LinkedIn</td>
+                            <td><a href="https://www.linkedin.com/in/mehvix/">Max Vogel</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -98,7 +103,7 @@
         </div>
 
         <div style="padding-top: 1em">
-            <h2>Pages</h2>
+            <h1>Pages</h1>
 
             <table class="about">
                 <tbody>
