--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 href="./static/media/IMG_20191020_011042.jpg">photo of me</a><img src="./static/media/expandoImage.svg"
                 class="dropdown" onclick="toggleImage()"><img id='toggleImage'
                 src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 3% 0" class="hidden"> at
-            UW-Madhacks 2019. In my free time I enjoy fencing, coding, CADing, <a
+            UW-Madhacks 2019. I'm interested in studying engineering and passionate about privacy and security. In my
+            free time I enjoy fencing, coding, CADing, <a
                 href="https://open.spotify.com/playlist/2uEoR9SXgtMSgjIjgohVnz?si=H0eRZQD_SW-AM0F1BCxEEQ">listening
                 to music</a>, and working on <a href="https://www.team1306.com">1306</a> stuff.
         </div>
@@ -78,16 +79,21 @@
                         </tr>
                         <tr>
                             <td>Matrix</td>
-                            <td><a href="https://matrix.to/#/@mehvix:matrix.org">@mehvix:matrix.org</a> (<a href="keys.html">Keys</a>)
+                            <td>@mehvix:matrix.org (<a
+                                    href="keys.html">Keys</a>)
                             </td>
+                        </tr>
+                        <tr>
+                            <td>Discord</td>
+                            <td>Mehvix#7966</td>
                         </tr>
                         <tr>
                             <td>GitHub</td>
                             <td><a href="https://github.com/mehvix">Mehvix</a></td>
                         </tr>
                         <tr>
-                            <td>Discord</td>
-                            <td>Mehvix#7966</td>
+                            <td>Stack Overflow</td>
+                            <td><a href="https://stackoverflow.com/users/7833617/">Mehvix</a></td>
                         </tr>
                         <tr>
                             <td>Resumé</td>
@@ -130,7 +136,7 @@
                 href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
 
             <script>
-                document.write("" + new Date().getFullYear())
+                document.write(new Date().getFullYear())
             </script>
             - Max Vogel
         </div>
