--- a/quotes.html
+++ b/quotes.html
@@ -370,7 +370,7 @@
                 href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br />
 
             <script>
-                document.write("" + new Date().getFullYear());
+                document.write(new Date().getFullYear());
             </script>
             - Max Vogel
         </div>
