--- a/keys.html
+++ b/keys.html
@@ -140,7 +140,7 @@ LKutr+KwFwaJLLcqxjciyMueRAnPoKrodbIZ+ALMR2GMhJD6y7RuDBm1ll7c
                 href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
 
             <script>
-                document.write("" + new Date().getFullYear())
+                document.write(new Date().getFullYear())
             </script>
             - Max Vogel
         </div>
