--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <strong><a href="./" class="inverse-bg">Home</a></strong>
         </div>
         <div>
-            Hello! I’m Max Vogel and live in Middleton, WI. Here’s a <a
+            Hello! I’m Max Vogel and I live in Wisconsin. Here’s a <a
                 href="./static/media/IMG_20191020_011042.jpg">photo of me</a><img src="./static/media/expandoImage.svg"
                 class="dropdown" onclick="toggleImage()"><img id='toggleImage'
                 src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 1% 0" class="hidden"> at
