--- a/keys.html
+++ b/keys.html
@@ -75,7 +75,7 @@
                     <table>
                         <tr>
                             <td>Session ID:</td>
-                            <td><code>FEFMLLUFCI</code></td>
+                            <td><code>NUOPAMGSIG</code></td>
                         </tr>
                     </table>
 
@@ -84,7 +84,7 @@
                     <table>
                         <tr>
                             <td>Session key:</td>
-                            <td><code>N4vu992cIgb7WJmc2MYlyGHrE+QddJV2ByxBElmZJRM</code></td>
+                            <td><code>on33XcKux5jqV9sZf+CjFUXr31BZ3bsZzUW8SkDwuoQ</code></td>
                         </tr>
                     </table>
                 </li>
