removed extra lst

--- a/todo.html
+++ b/todo.html
@@ -39,7 +39,8 @@
             <a href="./index.html">~</a> /
             <strong><a href="todo.html" class="inverse-bg">#TODO</a></strong>
         </div>
-        <li>A backlog of future projects I haven't gotten around to yet.</li>
+        A backlog of future projects I haven't gotten around to yet.
+        <br>
         ---
         </li>
 
