formatting, misc changes

--- a/404.html
+++ b/404.html
@@ -17,8 +17,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="https://mehvix.com">~</a> /
-            <strong><a href="" class="inverse-bg">404</a></strong>
+            <a href="https://mehvix.com">~</a>/<a href="" class="inverse-bg">404</a>
         </div>
 
         <p>File not found. If you think this should exist, reach out to me (my contact info is on the home page).
