--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <body>
     <div class="box">
         <div class="nav">
-            <strong><a href="./" class="inverse-bg">Home</a></strong>
+            <a href="" class="inverse-bg">~</a>/
         </div>
         <div>
-            Hello! I’m Max Vogel and I live in Wisconsin. Here’s a <a
+            Hello! My name is Max Vogel, but I go by Mehvix online. Here’s a <a
                 href="./static/media/IMG_20191020_011042.jpg">photo of me</a><img src="./static/media/expandoImage.svg"
                 class="dropdown" onclick="toggleImage()"><img id='toggleImage'
                 src="./static/media/IMG_20191020_011042.jpg" style="width: 100%; margin: 1% 0" class="hidden"> at
@@ -81,7 +81,7 @@
                 to music</a>, and working on <a href="https://www.team1306.com">1306</a> stuff.
         </div>
 
-        <div style="padding-top: 1em">
+        <div>
             <h1>Me</h1>
 
             <div>
@@ -122,7 +122,7 @@
             </div>
         </div>
 
-        <div style="padding-top: 1em">
+        <div>
             <h1>Pages</h1>
 
             <table class="about">
