--- a/keys.html
+++ b/keys.html
@@ -44,8 +44,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="./index.html">~</a> /
-            <strong><a href="keys.html" class="inverse-bg">Keys</a></strong>
+            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Keys</a>
         </div>
 
         <h1>Matrix</h1>
@@ -95,7 +94,7 @@
         <ul>
             <li> <a href="./static/media/mehvix@protonmail.com.asc">Download from mehvix.com</a><br></li>
             <li> <a href="https://api.protonmail.ch/pks/lookup?op=get&search=mehvix@protonmail.com">Download from
-                    Protonmail API</a><br></li>
+                    ProtonMail API</a><br></li>
             <li> <a href="#" onclick="copyText()">Copy (mehvix.com) to clipboard</a></li>
         </ul>
         <pre><code class="pgp">curl -L https://mehvix.com/static/media/mehvix@protonmail.com.asc | gpg --import</code></pre>
