--- a/mc.html
+++ b/mc.html
@@ -20,9 +20,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="../index.html">~</a> /
-            <a href="./index.html">Server</a> /
-            <strong><a href="#" class="inverse-bg">mc</a></strong>
+            <a href="../index.html">~</a>/<a href="./index.html">Server</a>/<a href="" class="inverse-bg">mc</a>
         </div>
 
 
