--- a/projects-wip.html
+++ b/projects-wip.html
@@ -20,8 +20,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="./index.html">~</a> /
-            <strong><a href="#" class="inverse-bg">Projects</a></strong>
+            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Projects</a>
         </div>
 
             <article>
