--- a/quotes.html
+++ b/quotes.html
@@ -45,8 +45,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="./index.html">~</a> /
-            <a href="#" class="inverse-bg">Quotes</a>
+            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Quotes</a>
         </div>
         <div class="main">
             <article>
