--- a/serverservices.html
+++ b/serverservices.html
@@ -20,8 +20,7 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="./index.html">~</a> /
-            <strong><a href="serverservices.html" class="inverse-bg">Server</a></strong>
+            <a href="./index.html">~</a>/<a href="" class="inverse-bg">Server</a>
         </div>
 
         <p>
