--- a/todo.html
+++ b/todo.html
@@ -14,7 +14,7 @@
             --inside-bg-color: #dbe2e5;
         }
 
-        article > li {
+        article>li {
             margin: 0;
             margin-left: 2ch;
             list-style: none;
@@ -36,13 +36,11 @@
 <body>
     <div class="box">
         <div class="nav">
-            <a href="./index.html">~</a> /
-            <strong><a href="todo.html" class="inverse-bg">#TODO</a></strong>
+            <a href="./index.html">~</a>/<a href="" class="inverse-bg">#TODO</a>
         </div>
         A backlog of future projects I haven't gotten around to yet.
         <br>
         ---
-        </li>
 
         <article>
             <h1>Program to automatically download videos from YouTube as they're uploaded</h1>
@@ -81,18 +79,18 @@
             <h1>Crypto address replacer</h1>
             <li>Replaces copied crypto address with a different address<br>
 
-            <h1>Soundcloud Downloader with Metadata Scraper</h1>
+                <h1>Soundcloud Downloader with Metadata Scraper</h1>
 
-            <h1>Logs.tf scrapper + leaderboard</h1>
+                <h1>Logs.tf scrapper + leaderboard</h1>
             <li>Integrate with <a href="https://github.com/Mehvix/Equalizer">Equalizer?</a></li>
 
             <h1>"Jon Bois" style video about Richard Russel</h1>
             <li><a href="https://en.wikipedia.org/wiki/2018_Horizon_Air_Q400_incident">Wikipedia Article</a></li>
-            <li><a href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC">Jon Bois's Pretty Good
-                    Series</a></li>
+            <li><a href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC">Jon Bois's Pretty
+                    Good Series</a></li>
 
             <h1>Right to Repair cite</h1>
-            <li>Similars to net neutrality site concept</li>
+            <li>Similar to net neutrality site concept</li>
 
             <h1>Typeracer bot</h1>
 
@@ -103,6 +101,8 @@
             <li>Pretty sure I saw someone do this with Trump's Twitter</li>
 
             <h1>Learn Vim</h1>
+
+            <h1>Learn Regex</h1>
 
             <h1>Write about completed projects and other topics</h1>
             <li>How and why to learn Colemak</li>
