--- a/todo.html
+++ b/todo.html
@@ -14,14 +14,15 @@
             --inside-bg-color: #dbe2e5;
         }
 
-        article>li {
+        article > li {
             margin: 0;
             margin-left: 2ch;
             list-style: none;
         }
 
         h1+li {
-            margin-top: .5em;
+            margin-top: .25em;
+            margin-bottom: 0;
         }
 
         h1 {
@@ -77,11 +78,11 @@
             <h1>Hardware keylogger</h1>
 
             <h1>Crypto address replacer</h1>
-            <li>Replaces copied crypto address with a different address<br>
+            <li>Replaces copied crypto address with a different address</li>
 
-                <h1>Soundcloud Downloader with Metadata Scraper</h1>
+            <h1>Soundcloud Downloader with Metadata Scraper</h1>
 
-                <h1>Logs.tf scrapper + leaderboard</h1>
+            <h1>Logs.tf scrapper + leaderboard</h1>
             <li>Integrate with <a href="https://github.com/Mehvix/Equalizer">Equalizer?</a></li>
 
             <h1>"Jon Bois" style video about Richard Russel</h1>
@@ -89,7 +90,7 @@
             <li><a href="https://www.youtube.com/playlist?list=PLUXSZMIiUfFSCYW1o-4whWtepyVlsfuCC">Jon Bois's Pretty
                     Good Series</a></li>
 
-            <h1>Right to Repair cite</h1>
+            <h1>Right to Repair site</h1>
             <li>Similar to net neutrality site concept</li>
 
             <h1>Typeracer bot</h1>
@@ -103,6 +104,8 @@
             <h1>Learn Vim</h1>
 
             <h1>Learn Regex</h1>
+
+            <h1>Resistor color code calculator</h1>
 
             <h1>Write about completed projects and other topics</h1>
             <li>How and why to learn Colemak</li>
